[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/shop/shop_bg.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Kelly_Slab/KellySlab-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/shop/gold_coin.png" type="Texture" id=3]
[ext_resource path="res://scenes/shop/Shopgrid.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/shop/shop.gd" type="Script" id=5]
[ext_resource path="res://scenes/shop/Statcontainer.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shopmargain" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1088.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" parent="Shopmargain" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 50.0
margin_right = 1038.0
margin_bottom = 1030.0

[node name="ScrollContainer" parent="Shopmargain/MarginContainer" index="0"]
margin_right = 938.0
margin_bottom = 960.0

[node name="shop_gold" type="MarginContainer" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 160.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="shop_gold"]
margin_right = 96.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="shop_gold/NinePatchRect"]
margin_right = 152.0
margin_bottom = 32.0
custom_constants/separation = -50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goldlabel" type="Label" parent="shop_gold/NinePatchRect/HBoxContainer"]
margin_top = 6.0
margin_right = 38.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "10000"
align = 1

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="shop_gold/NinePatchRect/HBoxContainer"]
margin_left = -12.0
margin_right = 152.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NinePatchRect" type="NinePatchRect" parent="shop_gold/NinePatchRect/HBoxContainer/AspectRatioContainer"]
margin_left = 66.0
margin_right = 98.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )

[node name="Back_button" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -100.0
margin_right = 380.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backbutton" type="Button" parent="Back_button"]
margin_right = 330.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Back_button"]
margin_right = 330.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Back"
align = 1
valign = 1

[node name="Statcontainer" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="Shopmargain/MarginContainer/ScrollContainer/GridContainer/MarginContainer3/Health" to="." method="_on_Health_pressed"]
[connection signal="pressed" from="Shopmargain/MarginContainer/ScrollContainer/GridContainer/MarginContainer4/Attack_Speed" to="." method="_on_Attack_Speed_pressed"]
[connection signal="pressed" from="Shopmargain/MarginContainer/ScrollContainer/GridContainer/MarginContainer5/Damage" to="." method="_on_Damage_pressed"]
[connection signal="pressed" from="Shopmargain/MarginContainer/ScrollContainer/GridContainer/MarginContainer6/Bullet_Speed" to="." method="_on_Bullet_Speed_pressed"]
[connection signal="pressed" from="Shopmargain/MarginContainer/ScrollContainer/GridContainer/MarginContainer7/Bullet_Size" to="." method="_on_Bullet_Size_pressed"]
[connection signal="pressed" from="Shopmargain/MarginContainer/ScrollContainer/GridContainer/MarginContainer8/Bullet_UP" to="." method="_on_Bullet_UP_pressed"]
[connection signal="pressed" from="Shopmargain/MarginContainer/ScrollContainer/GridContainer/MarginContainer9/plus1_Bullet" to="." method="_on_plus1_Bullet_pressed"]
[connection signal="pressed" from="Back_button/Backbutton" to="." method="_on_Backbutton_pressed"]

[editable path="Shopmargain/MarginContainer"]
[editable path="Statcontainer"]
